--- a/game.html
+++ b/game.html
@@ -9,68 +9,113 @@
 <style>
 body{
 margin:0;
-font-family:monospace;
 background:#000;
 color:#fff;
-text-align:center;
+font-family:Arial;
 overflow:hidden;
 }
 
-/* background skulls */
+/* TOP */
+.top{
+text-align:center;
+font-size:32px;
+padding:15px;
+letter-spacing:4px;
+border-bottom:1px solid #fff;
+text-shadow:0 0 20px #fff;
+animation:glow 2s infinite alternate;
+}
+@keyframes glow{
+from{text-shadow:0 0 5px #fff}
+to{text-shadow:0 0 25px #fff}
+}
+
+/* BACKGROUND SKULLS */
 .skull{
 position:fixed;
 font-size:40px;
-opacity:0.07;
-animation:float 20s linear infinite;
+opacity:0.05;
+animation:float linear infinite;
 }
 @keyframes float{
-from{transform:translateY(120vh) rotate(0deg)}
-to{transform:translateY(-20vh) rotate(360deg)}
+0%{transform:translateY(120vh) rotate(0deg)}
+100%{transform:translateY(-20vh) rotate(360deg)}
 }
 
-/* UI */
-.top{
-font-size:28px;
-padding:15px;
-border-bottom:1px solid #fff;
-}
-
+/* CARD */
 .card{
-border:1px solid #fff;
-margin:10px;
-padding:15px;
-border-radius:12px;
-background:#000;
-box-shadow:0 0 20px rgba(255,255,255,0.15);
+margin:15px;
+padding:20px;
+border-radius:20px;
+background:rgba(255,255,255,0.03);
+border:1px solid rgba(255,255,255,0.2);
+box-shadow:0 0 40px rgba(255,255,255,0.1);
+backdrop-filter:blur(10px);
+transition:0.3s;
+}
+.card:hover{
+box-shadow:0 0 60px rgba(255,255,255,0.3);
 }
 
-button{
+/* BALANCE */
+.balance{
+font-size:48px;
+margin:10px 0;
+text-shadow:0 0 20px #fff;
+}
+
+/* BUTTON */
+.mine{
+width:90%;
+padding:20px;
+font-size:22px;
 background:#000;
 border:1px solid #fff;
 color:#fff;
-padding:15px;
-margin:5px;
-width:90%;
-font-size:16px;
+border-radius:20px;
+box-shadow:0 0 25px #fff;
+animation:pulse 1.5s infinite;
+}
+.mine:active{transform:scale(0.92)}
+@keyframes pulse{
+0%{box-shadow:0 0 10px #fff}
+50%{box-shadow:0 0 40px #fff}
+100%{box-shadow:0 0 10px #fff}
 }
 
-button:active{
-transform:scale(0.95);
-background:#111;
-}
-
+/* MENU */
 .menu{
 position:fixed;
 bottom:0;
 width:100%;
 display:flex;
+justify-content:space-around;
 background:#000;
 border-top:1px solid #fff;
 }
 .menu button{
+background:none;
+border:none;
+color:#fff;
 font-size:12px;
 padding:10px;
 }
+
+/* PARTICLES */
+.particle{
+position:fixed;
+width:4px;height:4px;
+background:#fff;
+border-radius:50%;
+opacity:0.7;
+animation:rise 5s linear infinite;
+}
+@keyframes rise{
+0%{transform:translateY(100vh);opacity:0}
+50%{opacity:1}
+100%{transform:translateY(-10vh);opacity:0}
+}
+
 .hidden{display:none}
 </style>
 </head>
@@ -79,53 +124,42 @@ padding:10px;
 
 <div class="top">☠ DARKCOIN ☠</div>
 
-<!-- EARN -->
-<div id="earn" class="card">
-<h3>Баланс</h3>
-<h1 id="coins">0</h1>
-<p>Энергия: <span id="energy">100</span></p>
-<button onclick="mine()">МАЙНИТЬ</button>
+<div id="mineTab" class="card">
+<h3>Balance</h3>
+<div class="balance" id="coins">0</div>
+<p>Energy: <span id="energy">100</span></p>
+<button class="mine" onclick="mine()">MINE</button>
 </div>
 
-<!-- UPGRADES -->
-<div id="upgrades" class="card hidden">
-<h3>Прокачка</h3>
-<p>Сила: <span id="power">1</span></p>
-<p>Фарм: <span id="farm">0</span>/сек</p>
-<button onclick="buyPower()">+Сила (50)</button>
-<button onclick="buyFarm()">+Фарм (200)</button>
+<div id="upgradeTab" class="card hidden">
+<h3>Upgrades</h3>
+<p>Power: <span id="power">1</span></p>
+<p>Farm: <span id="farm">0</span>/sec</p>
+<button onclick="buyPower()">Power +1 (50)</button>
+<button onclick="buyFarm()">Farm +1 (200)</button>
 </div>
 
-<!-- NFT -->
-<div id="nft" class="card hidden">
-<h3>NFT MARKET</h3>
+<div id="nftTab" class="card hidden">
+<h3>NFT</h3>
 <button onclick="buyNFT('Skull',500)">Skull 500</button>
-<button onclick="buyNFT('Black Skull',2000)">Black Skull 2000</button>
-
-<h4>Инвентарь</h4>
-<div id="inventory"></div>
+<button onclick="buyNFT('Dark Lord',5000)">Dark Lord 5000</button>
+<div id="inv"></div>
 </div>
 
-<!-- MARKET -->
-<div id="market" class="card hidden">
-<h3>Рынок игроков</h3>
-<p>Скоро: продажа NFT между игроками</p>
-</div>
-
-<!-- PROFILE -->
-<div id="profile" class="card hidden">
-<h3>Профиль</h3>
+<div id="profileTab" class="card hidden">
+<h3>Profile</h3>
 <p id="username"></p>
 <p>Level: <span id="level">1</span></p>
 </div>
 
 <div class="menu">
-<button onclick="tab('earn')">Mine</button>
-<button onclick="tab('upgrades')">Up</button>
-<button onclick="tab('nft')">NFT</button>
-<button onclick="tab('market')">Market</button>
-<button onclick="tab('profile')">Me</button>
+<button onclick="tab('mineTab')">Mine</button>
+<button onclick="tab('upgradeTab')">Upgrades</button>
+<button onclick="tab('nftTab')">NFT</button>
+<button onclick="tab('profileTab')">Profile</button>
 </div>
+
+<audio id="clickSound" src="https://assets.mixkit.co/sfx/preview/mixkit-game-click-1114.mp3"></audio>
 
 <script>
 let tg = window.Telegram.WebApp;
@@ -133,9 +167,7 @@ tg.expand();
 
 /* USER */
 let user = tg.initDataUnsafe?.user;
-if(user){
-username.innerText="@"+user.username;
-}
+if(user){username.innerText="@"+user.username}
 
 /* DATA */
 let coins=+localStorage.getItem("coins")||0;
@@ -145,7 +177,6 @@ let farm=+localStorage.getItem("farm")||0;
 let level=+localStorage.getItem("level")||1;
 let nft=JSON.parse(localStorage.getItem("nft")||"[]");
 
-/* UI */
 function save(){
 localStorage.setItem("coins",coins);
 localStorage.setItem("energy",energy);
@@ -156,20 +187,26 @@ localStorage.setItem("nft",JSON.stringify(nft));
 }
 
 function update(){
-coinsEl.innerText=coins;
 document.getElementById("coins").innerText=coins;
 document.getElementById("energy").innerText=energy;
 document.getElementById("power").innerText=power;
 document.getElementById("farm").innerText=farm;
 document.getElementById("level").innerText=level;
 
-let inv="";
-nft.forEach(n=>inv+="☠ "+n+"<br>");
-inventory.innerHTML=inv;
+let invHTML="";
+nft.forEach(n=>invHTML+="☠ "+n+"<br>");
+inv.innerHTML=invHTML;
 
 save();
 }
 update();
+
+/* SOUND + VIBRO */
+function fx(){
+clickSound.currentTime=0;
+clickSound.play();
+if(navigator.vibrate) navigator.vibrate(20);
+}
 
 /* MINE */
 function mine(){
@@ -177,33 +214,24 @@ if(energy<=0) return;
 coins+=power;
 energy--;
 level=Math.floor(coins/1000)+1;
+fx();
 update();
 }
 
-/* AUTO FARM */
-setInterval(()=>{
-coins+=farm;
-update();
-},1000);
-
-/* ENERGY */
-setInterval(()=>{
-if(energy<100){energy++;update();}
-},3000);
+/* AUTO */
+setInterval(()=>{coins+=farm;update()},1000);
+setInterval(()=>{if(energy<100){energy++;update()}},3000);
 
 /* UPGRADES */
-function buyPower(){
-if(coins>=50){coins-=50;power++;update();}
-}
-function buyFarm(){
-if(coins>=200){coins-=200;farm++;update();}
-}
+function buyPower(){if(coins>=50){coins-=50;power++;fx();update()}}
+function buyFarm(){if(coins>=200){coins-=200;farm++;fx();update()}}
 
 /* NFT */
 function buyNFT(name,price){
 if(coins>=price){
 coins-=price;
 nft.push(name);
+fx();
 update();
 }
 }
@@ -212,18 +240,28 @@ update();
 function tab(id){
 document.querySelectorAll(".card").forEach(e=>e.classList.add("hidden"));
 document.getElementById(id).classList.remove("hidden");
+fx();
 }
 
-/* SKULL BACKGROUND */
-for(let i=0;i<25;i++){
+/* SKULLS */
+for(let i=0;i<30;i++){
 let s=document.createElement("div");
 s.className="skull";
 s.innerHTML="☠";
 s.style.left=Math.random()*100+"vw";
 s.style.fontSize=(20+Math.random()*50)+"px";
-s.style.animationDuration=(10+Math.random()*20)+"s";
+s.style.animationDuration=(10+Math.random()*30)+"s";
 document.body.appendChild(s);
 }
+
+/* PARTICLES */
+setInterval(()=>{
+let p=document.createElement("div");
+p.className="particle";
+p.style.left=Math.random()*100+"vw";
+document.body.appendChild(p);
+setTimeout(()=>p.remove(),5000);
+},200);
 </script>
 
 </body>
